--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -37,6 +37,14 @@
         </div>
         <div class="sm:col-span-1">
           <dt class="text-sm leading-5 font-medium text-gray-500">
+            Need Accommodation
+          </dt>
+          <dd class="mt-1 text-sm leading-5 text-gray-900">
+            <%= @application.need_stay ? 'Yes' : 'No' %>
+          </dd>
+        </div>
+        <div class="sm:col-span-1">
+          <dt class="text-sm leading-5 font-medium text-gray-500">
             Flight Number
           </dt>
           <dd class="mt-1 text-sm leading-5 text-gray-900">
@@ -124,7 +132,7 @@
       </ul>
     </div>
   </div>
-<!--  <div class="mt-4 flex">-->
+  <!--  <div class="mt-4 flex">-->
   <!--    <div class="py-6 px-4 text-3xl font-bold">-->
   <!--      2-->
   <!--    </div>-->
