--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -12,10 +12,12 @@
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-    <%= f.input :flight_number, label: 'Enter Your flight number' %>
-    <%= f.input :port_of_departure, label: 'Place you are coming form' %>
-    <%= f.association :port, collection: Port.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, label: 'Port of arrival in Kerala' %>
+    <%= f.input :flight_number, label: 'Enter Your flight number', required: true %>
+    <%= f.input :port_of_departure, label: 'Place you are coming form', required: true %>
+    <%= f.association :port, collection: Port.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, label: 'Port of arrival in Kerala', required: true %>
+    <%= f.input :arrival_on, label: 'Date of Arrival', html5: true, as: :date, required: true %>
     <%= f.input :need_stay, label: 'Do you need free accommodation from the government?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+
 
     <span class="inline-flex rounded-md shadow-sm">
           <%= f.button :submit, 'Create Application', 'data-turbolinks-scroll': false, class: 'mt-4 inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-gray-900 hover:bg-gray-800 focus:outline-none focus:border-gray-700 focus:shadow-outline-indigo active:bg-gray-700 transition ease-in-out duration-150' %>
