--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
       <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
         <div class="mt-8 md:mt-0 md:order-1">
           <p class="text-center text-base leading-6 text-gray-400">
-            &copy; 2020 CoronaSafe Network. All rights reserved.
+            &copy; 2020 All rights reserved.
           </p>
         </div>
       </div>
