--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -8,6 +8,9 @@
     <div class="text-5xl font-black mt-4 text-center">
       Safe Travel Pass
     </div>
+    <div class="mt-3 lg:mt-0 mx-auto w-full flex justify-center">
+      <%= link_to 'Print Traveller Details', print_application_contact_path(@application, @contact), class: 'bg-orange-300 inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 rounded shadow text-gray-800' %>
+    </div>
     <div class="flex flex-col-reverse md:flex-row">
       <div class="md:w-1/2 px-4">
         <dl>
