--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -12,7 +12,7 @@
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-    <%= f.input :flight_number, label: 'Enter Your flight number', required: true %>
+    <%= f.input :flight_number, label: 'Enter Your Flight/Ship number', required: true %>
     <%= f.input :port_of_departure, label: 'Place you are coming form', required: true %>
     <%= f.association :port, collection: Port.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, label: 'Port of arrival in Kerala', required: true %>
     <%= f.input :arrival_on, label: 'Date of Arrival', html5: true, as: :date, required: true %>
